--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
+    "style-loader": "^1.0.0",
     "webpack": "^4.15.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
