--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "webpack-dev-server --open"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "history": "^4.6.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
