--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
