--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest-styled-components": "^6.3.3",
     "path": "^0.12.7",
+    "react-test-renderer": "^16.10.2",
+    "react-testing-library": "^8.0.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.15.0",
     "webpack-cli": "^3.0.8",
