--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-test-renderer": "^16.10.2",
     "react-testing-library": "^8.0.1",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
     "webpack": "^4.15.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
